--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,33 +1,41 @@
-        global
-                log 127.0.0.1   local1
-                maxconn 4096
+global
+        log 127.0.0.1   local1
+        maxconn 4096
         
-        defaults
-                log     global
-                mode    tcp
-                option  tcplog
-                retries 3
-                option redispatch
-                maxconn 2000
-                timeout connect 5000
-                timeout client 50000
-                timeout server 50000
-        
-        listen  stats
-                bind *:1936
-                mode http
-                stats enable
-                stats hide-version
-                stats realm Haproxy\ Statistics
-                stats uri /
-        
-        listen sentinel
-                bind *:26379
-                mode            tcp
-                balance         roundrobin
-                timeout client  3h
-                timeout server  3h
-                option          clitcpka
-                server          sentinel1 172.38.0.14:26379  check inter 5s rise 2 fall 3
-                server          sentinel2 172.38.0.15:26379  check inter 5s rise 2 fall 3
-                server          sentinel3 172.38.0.16:26379  check inter 5s rise 2 fall 3
+defaults
+    log     global
+    mode    tcp
+    option  tcplog
+    retries 3
+    option redispatch
+    maxconn 2000
+    timeout connect 5000
+    timeout client 50000
+    timeout server 50000
+
+listen  stats
+    bind *:1936
+    mode http
+    stats enable
+    stats hide-version
+    stats refresh 10s
+    stats realm Haproxy\ Statistics
+    stats uri /
+
+listen redis
+    bind *:6379
+    mode tcp
+    balance first
+    option tcp-check
+    timeout client 3h
+    timeout server 3h
+    tcp-check send "PING\r\n"
+    tcp-check expect string "+PONG"
+    tcp-check send "info replication\r\n"
+    tcp-check expect string "role:master"
+    tcp-check send "QUIT\r\n"
+    tcp-check expect string "+OK"
+    server redis1 172.38.0.11:6379 check inter 5s rise 2 fall 3 weight 1
+    server redis2 172.38.0.12:6379 check inter 5s rise 2 fall 3 weight 1
+    server redis3 172.38.0.13:6379 check inter 5s rise 2 fall 3 weight 1
+    server redis4 172.38.0.18:6379 check inter 5s rise 2 fall 3 weight 1
